M:N is almost done, award is working, PlayerDTO needs to be fixed